--- a/src/assets/styles/intro.css
+++ b/src/assets/styles/intro.css
@@ -12,6 +12,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   color: #fff;
+  z-index: 2;
 }
 
 .center-hint {
@@ -36,8 +37,17 @@
   height: 8rem;
   width: 18rem;
 }
-.center-word div{
-  margin: .3rem 0;
+.center-word div {
+  margin: 0.3rem 0;
+}
+
+.bg-white {
+  background-color: rgba(255, 255, 255, 0.2);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .word {
