--- a/src/assets/styles/introduce.css
+++ b/src/assets/styles/introduce.css
@@ -140,7 +140,7 @@
   color: var(--highlight-pink);
 }
 
-.career-list {
+.career-list{
   font-size: 1rem;
 }
 
@@ -154,16 +154,25 @@
   margin: 0.5rem 0;
 }
 
-.contact-section{
+.exp-section {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 0.5rem;
+}
+
+.contact-section {
   display: flex;
   flex-direction: column;
-  gap: .1rem;
+  gap: 0.1rem;
   width: 95%;
-  margin: .5rem auto 0 auto;
+  margin: 0.5rem auto 0 auto;
   font-size: 1.3rem;
 }
 
-.unicon.none-top svg{
+.unicon.none-top svg {
   top: 0;
 }
 
