--- a/src/assets/styles/exp-container.css
+++ b/src/assets/styles/exp-container.css
@@ -40,6 +40,7 @@
   justify-content: center;
   gap: 0.3rem;
   font-weight: 500;
+  flex-wrap: wrap;
 }
 
 .exp-tags span {
@@ -95,4 +96,19 @@
   background-color: var(--main-pink);
   padding: 5px 9px;
   border-radius: 5px;
+}
+
+@media (max-width: 768px){
+  .exp-title{
+    max-width: 75%;
+  }
+  .exp-list{
+    width: 70%;
+  }
+}
+@media (max-width: 700px){
+  .exp-container{
+    max-width: 90%;
+  }
+
 }
