--- a/src/assets/styles/exp-container.css
+++ b/src/assets/styles/exp-container.css
@@ -88,6 +88,10 @@
   background: linear-gradient(135deg, #41b883 30%, #35495e);
   color: #fff;
 }
+.Selenium{
+  background: #43B02A;
+  color: #fff;
+}
 
 .exp-detail-btn-container {
   margin: 0.5rem 1rem;
