--- a/src/assets/styles/exp-container.css
+++ b/src/assets/styles/exp-container.css
@@ -51,26 +51,22 @@
   box-shadow: 2px 3px 2px rgba(0, 0, 0, 0.3);
 }
 
-.completed {
+.개발_완료 {
   background-color: #006989;
   color: #fff;
 }
-.ongoing {
+.개발_중 {
   background-color: var(--highlight-pink);
   color: #fff;
 }
-.live {
+.서비스_중 {
   background-color: #85c7f2;
 }
-.retired {
+.서비스_종료 {
   background-color: #eed962;
 }
 .halted {
   background-color: var(--gray);
-}
-.archived {
-  background-color: #7e595c;
-  color: #fff;
 }
 .Streamlit {
   background: linear-gradient(45deg, #ff4b4b, #bd4043, #7d353b);
