--- a/src/assets/styles/intro.css
+++ b/src/assets/styles/intro.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100vh; /* 화면 높이 전체를 차지 */
   overflow: hidden;
-  background-color: var(--main-pink);
+  background-color: var(--main);
 }
 
 .center-box {
@@ -24,7 +24,7 @@
   font-style: italic;
 }
 .center-word {
-  background-color: var(--highlight-pink);
+  background-color: var(--highlight);
   font-family: "ghana";
   padding: 0 0.5rem;
   font-size: 3rem;
@@ -56,9 +56,9 @@
   white-space: pre-line;
   font-family: "ghana";
   font-size: 2rem;
-  color: var(--sub-pink);
+  color: var(--sub);
 }
 
 .word.highlight {
-  color: var(--highlight-pink);
+  color: var(--highlight);
 }
