--- a/src/assets/styles/introduce.css
+++ b/src/assets/styles/introduce.css
@@ -176,7 +176,7 @@
   gap: 0.1rem;
   width: 90%;
   margin: 0.5rem auto;
-  font-size: 1.3rem;
+  /* font-size: 1.3rem; */
 }
 
 .unicon.none-top svg {
